--- a/_data/students.yml
+++ b/_data/students.yml
@@ -8,18 +8,16 @@
 #  education3:
 #  education4:
 
-- name: Ilse Kuijf 
+- name: Raja Hasnain Anwar
+  photo: hasnain.jpg
+  info: PhD Student
+  email: rajahasnainanwar_AT_arizona.edu
+  number_educ: 1
+  education1: BS Computer Science, <a href="http://nust.edu.pk/">National University of Sciences and Technology, Pakistan</a>
+
+- name: Yutong Liu
   photo: rock.jpg
-  info: Master student
-  email: m.ortego.larrazabal@umail.leidenuniv.nl
+  info: PhD student
+  email: yutong_AT_arizona.edu
   number_educ: 0
   education1:
-
-- name: Tessa Van der Ent
-  photo: rock.jpg
-  info: Master student
-  email: m.ortego.larrazabal@umail.leidenuniv.nl
-  number_educ: 0
-  education1:
-
-
