--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 - date: April 21, 2023
   headline: "our paper ''Detecting Privacy Threats with Machine Learning: A Design Framework for Identifying Side-Channel Risks of Illegitimate User Profiling'' accepted at [AMCIS 2023](https://amcis2023.aisconferences.org/)."
 
+- date: February 22, 2023 
+  headline: "Dynamic slice allocation project featured in [POWDER-RENEW Mobile and Wireless Week](https://it.utah.edu/node4/posts/2023/february/wireless-week.php)."
+
 - date: October 22, 2021
   headline: "TREO talk ''Keeping eyes on the road: the role of situated IS delegation in influencing drivers' situational awareness'' accepted at [ICIS 2021](https://icis2021.aisconferences.org/)."
