--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,8 +1,8 @@
 - date: April 21, 2023
-  headline: "Our paper ''Detecting Privacy Threats with Machine Learning: A Design Framework for Identifying Side-Channel Risks of Illegitimate User Profiling'' accepted at [AMCIS 2023](https://amcis2023.aisconferences.org/)."
+  headline: "Our paper ''Detecting Privacy Threats with Machine Learning: A Design Framework for Identifying Side-Channel Risks of Illegitimate User Profiling'' accepted at <a href="https://amcis2023.aisconferences.org/">AMCIS 2023</a>."
 
 - date: February 22, 2023 
-  headline: "Dynamic slice allocation project featured in [POWDER-RENEW Mobile and Wireless Week](https://it.utah.edu/node4/posts/2023/february/wireless-week.php)."
+  headline: "Dynamic slice allocation project featured in <a href="https://it.utah.edu/node4/posts/2023/february/wireless-week.php">POWDER-RENEW Mobile and Wireless Week</a>."
 
 - date: October 22, 2021
-  headline: "TREO talk ''Keeping eyes on the road: the role of situated IS delegation in influencing drivers' situational awareness'' accepted at [ICIS 2021](https://icis2021.aisconferences.org/)."
+  headline: "TREO talk ''Keeping eyes on the road: the role of situated IS delegation in influencing drivers' situational awareness'' accepted at <a href="https://ici2021.aisconferences.org/">ICIS 2021</a>."
