--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,6 +1,6 @@
 - name: Muhammad Taqi Raza
   photo: taqi.jpeg
-  info: Assistant professor
+  info: Assistant Professor
   email: taqi_AT_arizona.edu
   number_educ: 2
   education1: BS Information Technology, <a href="http://nust.edu.pk/">National University of Sciences and Technology, Pakistan</a>
