--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -11,3 +11,4 @@
   link:
     url: https://aisel.aisnet.org/cgi/viewcontent.cgi?article=1042&context=treos_icis2021
     display: ICIS 2021 TREOs
+  highlight: 1
