--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -30,7 +30,7 @@
 
 - name: "This could be you !"
   photo: rock.jpg
-  info: See <a href="https://adavanced-computing-lab.github.io/vacancies">openings</a> for more info
+  info: See <a href="https://adavanced-computing-lab.github.io/vacancies">openings</a> for more info.
   email: taqi_AT_arizona.edu
   number_educ: 0
   education1:
