--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -5,7 +5,7 @@
 
 - title: "Keeping eyes on the road: the role of situated IS delegation in influencing drivers' situational awareness"
   year: 2021
-  images: icis-treo.jpg
+  image: icis-treo.jpg
   description: "Our key idea is to leverage the way AI algorithms pre-process various traffic events in guiding drivers’ actions. By providing scenario-specific feedback, such an approach can integrate the decision process of a driver with that of the algorithmic aid."
   authors: "Raja Hasnain Anwar, Yi (Zoe) Zou, and Muhammad Taqi Raza"
   link:
