--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -11,7 +11,7 @@
   interest3: Cloud computing
 
 - name: Raja Hasnain Anwar
-  photo: hasnain.jpg
+  photo: hasnain.jpeg
   info: PhD Student
   email: rajahasnainanwar_AT_arizona.edu
   number_educ: 1
