--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -3,8 +3,8 @@
   info: Assistant Professor
   email: taqi_AT_arizona.edu
   number_educ: 2
-  education1: BS Information Technology, <a href="http://nust.edu.pk/">National University of Sciences and Technology, Pakistan</a>. 2008
-  education2: PhD Computer Science with Songwu Lu, <a href="http://www.cs.ucla.edu/">University of California, Los Angeles</a>. 2019
+  education1: BS Information Technology, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2008
+  education2: PhD Computer Science with Songwu Lu, <a href="http://www.cs.ucla.edu/" target="_blank">University of California, Los Angeles</a>. 2019
   number_rec: 3
   interest1: Networked systems security
   interest2: Internet of things
@@ -15,7 +15,7 @@
   info: PhD Student
   email: rajahasnainanwar_AT_arizona.edu
   number_educ: 1
-  education1: BS Computer Science, <a href="http://nust.edu.pk/">National University of Sciences and Technology, Pakistan</a>. 2020
+  education1: BS Computer Science, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2020
   number_rec: 3
   interest1: Security and privacy
   interest2: Networked systems security
