--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: September 5, 2023
+  headline: "Muhammad Shayan Nazeer, Ali Hamza Malik, and Shaun Ghosh joined the lab as PhD students."
+
+- date: August 16, 2023
+  headline: "Paper ''Redefining the Driver's Attention Gauge in Semi-Autonomous Vehicles'' accepted at MSWiM 2023."
+
 - date: April 21, 2023
   headline: "Our paper ''Detecting Privacy Threats with Machine Learning: A Design Framework for Identifying Side-Channel Risks of Illegitimate User Profiling'' accepted at AMCIS 2023."
 
