--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,7 +1,22 @@
+- title: "Redefining the Driver's Attention Gauge in Semi-Autonomous Vehicles"
+  year: 2023
+  image: attention_gauge.png
+  description: "Driver distraction caused by over-reliance on automotive technology is one of the leading causes of accidents in semi-autonomous vehicles. We identify the relationship between the traffic event, the type of automotive sensing technologies, and its processing resources to capture that event to design the driver's attention gauge."
+  authors: "Raja Hasnain Anwar, Fatima Muhammad Anwar, Muhammad Kumail Haider, Alon Efrat, and Muhammad Taqi Raza"
+   link:
+    url: https://mswimconf.com/2023/
+    display: MSWiM 2023
+  highlight: 1
+
 - title: "Detecting Privacy Threats with Machine Learning: A Design Framework for Identifying Side-Channel Risks of Illegitimate User Profiling"
   year: 2023
+  image: typing_model.png
   description: "Data-intensive systems are vulnerable to side-channel attacks in which hackers can extract sensitive information from a digital device without actively manipulating the target system. Nevertheless, there is a scarcity of IS research on how businesses can effectively detect and safeguard against side-channel attacks."
   authors: "Raja Hasnain Anwar, Yi (Zoe) Zou, and Muhammad Taqi Raza"
+  link:
+    url: https://aisel.aisnet.org/amcis2023/sig_sec/sig_sec/7/
+    display: AMCIS 2023
+  highlight: 1
 
 - title: "Keeping eyes on the road: the role of situated IS delegation in influencing drivers' situational awareness"
   year: 2021
@@ -11,7 +26,7 @@
   link:
     url: https://aisel.aisnet.org/cgi/viewcontent.cgi?article=1042&context=treos_icis2021
     display: ICIS 2021 TREOs
-  highlight: 1
+  highlight: 0
 
 - title: "Binary Black-box Evasion Attacks Against Deep Learning-based Static Malware Detectors with Adversarial Byte-Level Language Model"
   year: 2020
