--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -21,6 +21,17 @@
   interest2: Networked systems security
   interest3: Machine Learning
 
+- name: Shayan Nazeer
+  photo: shayan.jpg
+  info: PhD Student
+  email: mnazeer_AT_umass.edu
+  number_educ: 1
+  education1: BE Electrical Engineering, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2023
+  number_rec: 3
+  interest1: Networked Embedded Systems
+  interest2: Hardware Design
+  interest3: Machine Learning
+
 - name: "This could be you !"
   photo: rock.jpg
   info: See <a href="https://adavanced-computing-lab.github.io/vacancies">openings</a> for more info.
