--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -50,10 +50,10 @@
   number_educ: 1
   education1: BS Computer Engineering, <a href="http://umass.edu/" target="_blank">University of Massachusetts Amherstn</a>. 2022
   number_rec: 3
-  interest1: Quantum Communication/Computing/Algorithms
-  interest2: VLSI/Hardware Design
+  interest1: Quantum Computing/Algorithms/Commmunications
+  interest2: Computer & Mobile Networks 
   interest3: Machine Learning
-  interest4: Computer Networks
+  interest4: VLSI/Hardware Design
 
 - name: "This could be you !"
   photo: rock.jpg
