--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -48,7 +48,7 @@
   info: PhD Student
   email: sounakghosh_AT_umass.edu
   number_educ: 1
-  education1: BS Computer Engineering, <a href="http://umass.edu/" target="_blank">University of Massachusetts Amherstn</a>. 2022
+  education1: BS Computer Engineering, <a href="http://www.umass.edu/" target="_blank">University of Massachusetts Amherstn</a>. 2022
   number_rec: 3
   interest1: Quantum Computing/Algorithms/Commmunications
   interest2: Computer & Mobile Networks 
