--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -43,8 +43,8 @@
   interest2: System Security
   interest3: Machine Learning
 
-  - name: Sounak 'Shaun' Ghosh
-  photo: 
+- name: Sounak (Shaun) Ghosh
+  photo: shaun.jpg
   info: PhD Student
   email: sounakghosh_AT_umass.edu
   number_educ: 1
