--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -44,7 +44,7 @@
   interest3: Machine Learning
 
 - name: Sounak (Shaun) Ghosh
-  photo: shaun.jpg
+  photo: rock.jpg
   info: PhD Student
   email: sounakghosh_AT_umass.edu
   number_educ: 1
