--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -55,7 +55,7 @@
   interest3: Machine Learning
   interest4: VLSI/Hardware Design
 
-- name: "This could be you !"
+- name: "This could be you!!"
   photo: rock.jpg
   info: See <a href="https://adavanced-computing-lab.github.io/vacancies">openings</a> for more info.
   email: taqi_AT_arizona.edu
