--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,9 @@
 - date: September 5, 2023
   headline: "Muhammad Shayan Nazeer, Ali Hamza Malik, and Shaun Ghosh joined the lab as PhD students."
 
+- date: September 1, 2023
+  headline: "We have moved to UMass Amherst!"
+
 - date: August 16, 2023
   headline: "Paper ''Redefining the Driver's Attention Gauge in Semi-Autonomous Vehicles'' accepted at MSWiM 2023."
 
