--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -28,9 +28,10 @@
   number_educ: 1
   education1: BE Electrical Engineering, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2023
   number_rec: 3
-  interest1: Networked Embedded Systems
-  interest2: Hardware Design
-  interest3: Machine Learning
+  interest1: Embedded Systems
+  interest2: 5G at the edge
+  interest3: Internet of Things
+  interest4: Hardware Design
 
 - name: Ali Hamza Malik
   photo: ali.jpg
