Add news about Hasnain's paper presentation at MSWiM 2023

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: November 1, 2023
+  headline: "Hasnain presented our paper ''Redefining the Driver's Attention Gauge in Semi-Autonomous Vehicles'' at MSWiM 2023."
+
 - date: September 5, 2023
   headline: "Muhammad Shayan Nazeer, Ali Hamza Malik, and Shaun Ghosh joined the lab as PhD students."
 
