--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,4 +1,8 @@
 - title: Talk @ MSWiM'23
+  date: October 31, 2023
+  alt: Raja Hasnain Anwar presenting our paper on attention gauge in semi-autonomous vehicles at MSWiM'23
   image: PXL_20231101_210858504.MP.jpg
 - title: Luncheon
+  date: October 30, 2021
+  alt: Group meets at The Cheese Cake Factory in Tucson, Arizona for lunch.
   image: image_from_ios-1.jpg
