Fix broken links in news and publications

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -14,7 +14,7 @@
   headline: "Our paper ''Detecting Privacy Threats with Machine Learning: A Design Framework for Identifying Side-Channel Risks of Illegitimate User Profiling'' accepted at AMCIS 2023."
 
 - date: February 22, 2023 
-  headline: "Dynamic slice allocation project featured in <a href='https://it.utah.edu/node4/posts/2023/february/wireless-week.php'>POWDER-RENEW Mobile and Wireless Week</a>."
+  headline: "Dynamic slice allocation project featured in <a href='https://it.utah.edu/node4/posts/2023/february/wireless-week.php' target='_blank'>POWDER-RENEW Mobile and Wireless Week</a>."
 
 - date: October 22, 2021
   headline: "TREO talk ''Keeping eyes on the road: the role of situated IS delegation in influencing drivers' situational awareness'' accepted at ICIS 2021"
