--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,7 @@
+- title: Thanksgiving 2023
+  date: November 25, 2023
+  alt: Group celebrates Thanksgiving 2023.
+  image: PXL_20231125_203033767.jpg
 - title: Talk @ MSWiM'23
   date: October 31, 2023
   alt: Raja Hasnain Anwar presenting our paper on attention gauge in semi-autonomous vehicles at MSWiM'23
