--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -4,7 +4,7 @@
   image: PXL_20231125_203033767.jpg
 - title: Talk @ MSWiM'23
   date: October 31, 2023
-  alt: Raja Hasnain Anwar presenting our paper on attention gauge in semi-autonomous vehicles at MSWiM'23
+  alt: Raja Hasnain Anwar presenting our paper on attention gauge in semi-autonomous vehicles at MSWiM'23.
   image: PXL_20231101_210858504.MP.jpg
 - title: Luncheon
   date: October 30, 2021
