--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -16,10 +16,11 @@
   email: ranwar_AT_umass.edu
   number_educ: 1
   education1: BS Computer Science, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2020
-  number_rec: 3
-  interest1: Security and privacy
-  interest2: Networked systems security
-  interest3: Machine Learning
+  number_rec: 4
+  interest1: Networked Systems
+  interest2: System Security
+  interest3: Side-Channel Attacks
+  interest4: Machine Learning
 
 - name: Shayan Nazeer
   photo: shayan.jpg
