--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -16,6 +16,7 @@
     url: https://dl.acm.org/doi/10.1145/3616388.3617544
     display:  International Conference on Modeling, Analysis and Simulation of Wireless and Mobile Systems (MSWiM)
     pdf: 3616388.3617544.pdf
+    slides: MSWiM'23talk.pptx
   highlight: 1
 
 - title: "Detecting Privacy Threats with Machine Learning: A Design Framework for Identifying Side-Channel Risks of Illegitimate User Profiling"
