Add news about accepted paper at USENIX Security 2024

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: February 2, 2024
+  headline: "Paper on digital payment system security accepted at <em>USENIX Security 2024</em>."
+
 - date: November 1, 2023
   headline: "Hasnain presented our paper ''Redefining the Driver's Attention Gauge in Semi-Autonomous Vehicles'' at MSWiM 2023 in Montreal, Canada."
 
