--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: February 2, 2024
-  headline: "Paper on digital payment system security accepted at <em>USENIX Security 2024</em>."
+  headline: "Paper titled ''In Wallet We Trust: Bypassing the Digital Wallets Payment Security for Free Shopping'' accepted at <strong>USENIX Security Symposium 2024</strong>."
 
 - date: November 1, 2023
   headline: "Hasnain presented our paper ''Redefining the Driver's Attention Gauge in Semi-Autonomous Vehicles'' at MSWiM 2023 in Montreal, Canada."
