--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -27,13 +27,14 @@
   photo: shayan.jpg
   info: PhD Student
   email: mnazeer_AT_umass.edu
+  link: https://SHAYAN3519.github.io/
   number_educ: 1
   education1: BE Electrical Engineering, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2023
   number_rec: 4
   interest1: Embedded Systems
   interest2: 5G at the edge
   interest3: Internet of Things
-  interest4: Hardware Design
+  interest4: Cloud Computing
 
 - name: Ali Hamza Malik
   photo: ali.jpg
