--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -27,7 +27,7 @@
   photo: shayan.jpg
   info: PhD Student
   email: mnazeer_AT_umass.edu
-  link: https://SHAYAN3519.github.io/
+  link: https://mshayannazeer.github.io/
   number_educ: 1
   education1: BE Electrical Engineering, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2023
   number_rec: 4
