--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -40,6 +40,7 @@
   photo: ali.jpg
   info: PhD Student
   email: ahmalik_AT_umass.edu
+  link: https://alirafiqmalik.github.io/
   number_educ: 1
   education1: BE Electrical Engineering, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2023
   number_rec: 3
