--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -52,6 +52,7 @@
   photo: rock.jpg
   info: PhD Student
   email: sounakghosh_AT_umass.edu
+  link: https://people.umass.edu/sounakghosh/
   number_educ: 1
   education1: BS Computer Engineering, <a href="http://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a>. 2022
   number_rec: 4
