--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -49,7 +49,7 @@
   interest3: Machine Learning
 
 - name: Sounak (Shaun) Ghosh
-  photo: rock.jpg
+  photo: shaun.png
   info: PhD Student
   email: sounakghosh_AT_umass.edu
   link: https://people.umass.edu/sounakghosh/
