--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -56,7 +56,7 @@
   number_educ: 1
   education1: BS Computer Engineering, <a href="http://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a>. 2022
   number_rec: 4
-  interest1: Quantum Computing/Commmunications
+  interest1: Quantum Computing & Commmunications
   interest2: Computer & Mobile Networks 
   interest3: Machine Learning & Signal Processing
   interest4: Theory of Computation
