--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -2,6 +2,7 @@
   photo: taqi.jpeg
   info: Assistant Professor
   email: taqi_AT_umass.edu
+  link: https://takiraza.github.io/
   number_educ: 2
   education1: BS Information Technology, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2008
   education2: PhD Computer Science with Songwu Lu, <a href="http://www.cs.ucla.edu/" target="_blank">University of California, Los Angeles</a>. 2019
