Update team members' interests

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -45,7 +45,7 @@
   number_educ: 1
   education1: BE Electrical Engineering, <a href="http://nust.edu.pk/" target="_blank">National University of Sciences and Technology, Pakistan</a>. 2023
   number_rec: 3
-  interest1: Quantum Communication/Computing
+  interest1: Quantum Computing & Communications
   interest2: System Security
   interest3: Machine Learning
 
@@ -57,7 +57,7 @@
   number_educ: 1
   education1: BS Computer Engineering, <a href="http://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a>. 2022
   number_rec: 4
-  interest1: Quantum Computing & Commmunications
+  interest1: Quantum Computing & Communications
   interest2: Computer & Mobile Networks 
   interest3: Machine Learning & Signal Processing
   interest4: Theory of Computation
