Quatum news add

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: March 18, 2024
+  headline: "Kharazmi researchers are taking lead in designing secure and ethical <a href='https://www.umass.edu/news/article/umass-amherst-researchers-join-26-million-quantum-computing-effort-build-internet' target='_blank'>Quantum Internet design</a>."
+
 - date: February 25, 2024
   headline: "Paper titled ''In Wallet We Trust: Bypassing the Digital Wallets Payment Security for Free Shopping'' accepted at <strong>USENIX Security Symposium 2024</strong>."
 
