Add new image and update gallery.yml

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,11 +1,18 @@
+- title: Talk @ CQN Annual Retreat'24
+  date: March 21, 2024
+  alt: Ali Hamza Malik presenting our work on Quantum Key Distribution protocol security.
+  image: IMG_8479.jpg
+
 - title: Thanksgiving 2023
   date: November 25, 2023
   alt: Group celebrates Thanksgiving 2023.
   image: PXL_20231125_203033767.jpg
+
 - title: Talk @ MSWiM'23
   date: October 31, 2023
   alt: Raja Hasnain Anwar presenting our paper on attention gauge in semi-autonomous vehicles at MSWiM'23.
   image: PXL_20231101_210858504.MP.jpg
+
 - title: Luncheon
   date: October 30, 2021
   alt: Group meets at The Cheese Cake Factory in Tucson, Arizona for lunch.
