--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,8 @@
+- title: Poster Session @ CQN Annual Retreat'24
+  date: March 22, 2024
+  alt: Ali Hamza Malik presenting our work on Quantum Key Distribution protocol security.
+  image: IMG_8481.jpg
+
 - title: Talk @ CQN Annual Retreat'24
   date: March 21, 2024
   alt: Ali Hamza Malik presenting our work on Quantum Key Distribution protocol security.
