Update gallery.yml to remove specific event title

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,4 +1,4 @@
-- title: Poster Session @ CQN Annual Retreat'24
+- title: CQN Annual Retreat'24
   date: March 22, 2024
   alt: Ali Hamza Malik presenting our work on Quantum protocol security.
   image: IMG_8481.jpg
