Add location information to gallery images

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,24 +1,29 @@
 - title: CQN Annual Retreat'24
   date: March 22, 2024
+  loc: Tucson, Arizona
   alt: Ali Hamza Malik presenting our work on Quantum protocol security.
   image: IMG_8481.jpg
 
 - title: Talk @ CQN Annual Retreat'24
   date: March 21, 2024
+  loc: Tucson, Arizona
   alt: Ali Hamza Malik presenting our work on Quantum protocol security.
   image: IMG_8479.jpg
 
 - title: Thanksgiving 2023
   date: November 25, 2023
+  loc: Amherst, Massachusetts
   alt: Group celebrates Thanksgiving 2023.
   image: PXL_20231125_203033767.jpg
 
 - title: Talk @ MSWiM'23
   date: October 31, 2023
+  loc: Montreal, Canada
   alt: Raja Hasnain Anwar presenting our paper on attention gauge in semi-autonomous vehicles at MSWiM'23.
   image: PXL_20231101_210858504.MP.jpg
 
 - title: Luncheon
   date: October 30, 2021
-  alt: Group meets at The Cheese Cake Factory in Tucson, Arizona for lunch.
+  loc: Tucson, Arizona
+  alt: Group meets at The Cheese Cake Factory for lunch.
   image: image_from_ios-1.jpg
